--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -20,7 +20,7 @@
   <meta property="og:title" content="Mentions légales - Maître Giorgi Avocat à Marseille">
   <meta property="og:description"
     content="Consultez les mentions légales du site de Maître Giorgi, avocat à Marseille. Informations sur le responsable de la publication et les conditions d'utilisation du site.">
-  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg">
+  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/assets/images/profil-transparente.webp">
   <meta property="og:url" content="https://lisagiorgiavocat.netlify.app/mentions-legales.html">
   <meta property="og:type" content="website">
 
@@ -29,7 +29,7 @@
   <meta name="twitter:title" content="Mentions légales - Maître Giorgi Avocat à Marseille">
   <meta name="twitter:description"
     content="Consultez les mentions légales du site de Maître Giorgi, avocat à Marseille.">
-  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg">
+  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/assets/images/profil-transparente.webp">
 
   <!-- Canonical -->
   <link rel="canonical" href="https://lisagiorgiavocat.netlify.app/mentions-legales.html">
