--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -22,7 +22,7 @@
     content="Consultez la politique de confidentialité du site de Maître Giorgi, avocate à Marseille. Découvrez comment vos données sont collectées, utilisées et protégées.">
   <meta property="og:url" content="https://lisagiorgiavocat.netlify.app/politique-confidentialite.html">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/logo.jpg">
+  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/assets/images/profil-transparente.webp">
   <meta property="og:image:alt" content="Logo de Maître Giorgi, avocate à Marseille">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -34,7 +34,7 @@
   <meta name="twitter:title" content="Politique de Confidentialité - Maître Giorgi Avocat à Marseille">
   <meta name="twitter:description"
     content="Découvrez la politique de confidentialité de Maître Giorgi, avocate à Marseille. RGPD, données personnelles et sécurité.">
-  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/logo.jpg">
+  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/assets/images/profil-transparente.webp">
 
   <!-- Canonical -->
   <link rel="canonical" href="https://lisagiorgiavocat.netlify.app/politique-confidentialite.html">
