adjust margin for service item and bloc-hero for improved layout

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div id="Domaine" class="about">
     <div style="display: flex; justify-content: center; padding: 15px;">
-      <div class="service-item" style="padding: 15px;">
+      <div class="service-item" style="padding: 15px; margin-top: 10px;">
         <h3>Domaines d'activités</h3>
         <p>Je veille à structurer et sécuriser la fiscalité des particuliers et des entreprises, avec une approche
           intégrée en droit des sociétés.</p>
